Decrease to java 8, add more migrations